--- a/singolo1.html
+++ b/singolo1.html
@@ -9,6 +9,51 @@
   <link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
+  <header class="header">
+    <div class="wrapper header__wrapper">
+      <h1></h1>
+      <a href="#" class="logo"><span></span></a>
+      <nav class="header__navigation">
+          <ul class="navigation">
+              <li class="navigation__link navigation__link_active">HOME</li>
+              <li class="navigation__link">SERVICES</li>
+              <li class="navigation__link">PORTFOLIO</li>
+              <li class="navigation__link">ABOUT</li>
+              <li class="navigation__link">CONTACT</li>
+          </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="slider">
+      <div class="wrapper slider__wrapper">
+        <div class="slider__content">
+          <div class="vertical-phone">
 
+          </div>
+          <div class="horizontal-phone">
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="our-services">
+      <div class="wrapper our-services__wrapper">
+        <h2 class="our-services__title"></h2>
+        <p class="our-services__description"></p>
+        <div class="layout-3-column">
+          <ul class="our-services__list">
+            <li class="service">
+              <i class="service__icon"></i>
+              <h3 class="service__title"></h3>
+              <p class="service__description"></p>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </section>
+
+  </main>
 </body>
 </html>
