--- a/singolo1.html
+++ b/singolo1.html
@@ -11,15 +11,15 @@
 <body>
   <header class="header">
     <div class="wrapper header__wrapper">
-      <h1></h1>
-      <a href="#" class="logo"><span></span></a>
+      <h1 class="visuallyhidden">Singilo</h1>
+      <a href="#" class="logo">SINGOLO<span>*</span></a>
       <nav class="header__navigation">
           <ul class="navigation">
-              <li class="navigation__link navigation__link_active">HOME</li>
-              <li class="navigation__link">SERVICES</li>
-              <li class="navigation__link">PORTFOLIO</li>
-              <li class="navigation__link">ABOUT</li>
-              <li class="navigation__link">CONTACT</li>
+              <li class="navigation__link navigation__link_active"><a href="#">HOME</a></li>
+              <li class="navigation__link"><a href="#">SERVICES</a></li>
+              <li class="navigation__link"><a href="#">PORTFOLIO</a></li>
+              <li class="navigation__link"><a href="#">ABOUT</a></li>
+              <li class="navigation__link"><a href="#">CONTACT</a></li>
           </ul>
       </nav>
     </div>
