feat: add slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -27,14 +27,16 @@
   <main>
     <section class="slider">
       <div class="wrapper slider__wrapper">
+        <button class="slider__button slider__button_left"></button>
         <div class="slider__content">
-          <div class="vertical-phone">
-
+          <div class="phone phone__vertical">
+            <img src="./assets/images/iPhone-Vertical.png" alt="iPhone-Vertical">
           </div>
-          <div class="horizontal-phone">
-
+          <div class="phone phone__horizontal">
+            <img src="./assets/images/iPhone-Horizontal.png" alt="iPhone-Horizontal">
           </div>
         </div>
+        <button class="slider__button slider__button_right"></button>
       </div>
     </section>
     <section class="our-services">
