--- a/singolo1.html
+++ b/singolo1.html
@@ -27,7 +27,7 @@
   <main>
     <section class="slider">
       <div class="wrapper slider__wrapper">
-        <button class="slider__button slider__button_left"></button>
+        <div class="slider__button slider__button_left"></div>
         <div class="slider__content">
           <div class="phone phone__vertical">
             <img src="./assets/images/iPhone-Vertical.png" alt="iPhone-Vertical">
@@ -36,23 +36,67 @@
             <img src="./assets/images/iPhone-Horizontal.png" alt="iPhone-Horizontal">
           </div>
         </div>
-        <button class="slider__button slider__button_right"></button>
+        <div class="slider__button slider__button_right"></div>
       </div>
     </section>
     <section class="our-services">
       <div class="wrapper our-services__wrapper">
-        <h2 class="our-services__title"></h2>
-        <p class="our-services__description"></p>
-        <div class="layout-3-column">
-          <ul class="our-services__list">
-            <li class="service">
-              <i class="service__icon"></i>
-              <h3 class="service__title"></h3>
-              <p class="service__description"></p>
-            </li>
-          </ul>
-
-        </div>
+        <h2 class="our-services__title">Our Services</h2>
+        <p class="our-services__description">
+          Fusce dapibus, tellus ac cursus commodo, tortor
+          mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+          eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
+          mauris condimentum nibh.
+        </p>
+        <ul class="our-services__list layout-3-column">
+          <li class="service">
+            <img src="./assets/images/pen-ico.png" alt="phone-ico">
+            <h3 class="service__title">Custom Design</h3>
+            <p class="service__description">
+              Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet,
+              viverra lacus ut, ultrices velit.
+            </p>
+          </li>
+          <li class="service">
+            <img src="./assets/images/bulb-ico.png" alt="phone-ico">
+            <h3 class="service__title">Inovative Ideas</h3>
+            <p class="service__description">
+              Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+              nec rutrum tellus dolor id lorem.
+            </p>
+          </li>
+          <li class="service">
+            <img src="./assets/images/heart-ico.png" alt="phone-ico">
+            <h3 class="service__title">Love Is The Answer</h3>
+            <p class="service__description">
+              Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis,
+              et consequat felis. Quisque condimentum.
+            </p>
+          </li>
+          <li class="service">
+            <img src="./assets/images/phone-ico.png" alt="phone-ico">
+            <h3 class="service__title">Responsive Layout</h3>
+            <p class="service__description">Sed porttitor placerat rhoncus. In at nunc tellus.
+              Maecenas blandit nunc ligula. Praesent elit leo.
+            </p>
+          </li>
+          <li class="service">
+            <img src="./assets/images/bubble-ico.png" alt="phone-ico">
+            <h3 class="service__title">24 / 7 Support</h3>
+            <p class="service__description">
+              Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat.
+              Pellentesque egestas venenatis lorem .
+            </p>
+          </li>
+          <li class="service">
+            <img src="./assets/images/star-ico.png" alt="phone-ico">
+            <h3 class="service__title">Feel Like A Star</h3>
+            <p class="service__description">
+              Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+              Fusce vitae aliquam tellus.
+            </p>
+          </li>
+        </ul>
       </div>
     </section>
 
