feat: add portfolio section

--- a/singolo2.html
+++ b/singolo2.html
@@ -13,7 +13,60 @@
     <section class="portfolio">
       <div class="wrapper portfolio__wrapper">
           <h2 class="portfolio__title">Portfolio</h2>
-
+          <p class="portfolio__description">
+            Duis mollis, est non commodo luctus, nisi erat porttitor ligula,
+            eget lacinia odio sem nec elit.
+          </p>
+          <ul class="portfolio__tags tags">
+            <li class="tag tag_selected">All</li>
+            <li class="tag">Web Design</li>
+            <li class="tag">Graphic Design</li>
+            <li class="tag">Artwork</li>
+          </ul>
+          <ul class="portfolio__projects layout-4-column">
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-1.png" alt="Project-1">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-2.png" alt="Project-2">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-3.png" alt="Project-3">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-4.png" alt="Project-4">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-5.png" alt="Project-5">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-6.png" alt="Project-6">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-7.png" alt="Project-7">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-8.png" alt="Project-8">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-9.png" alt="Project-9">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-10.png" alt="Project-10">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-11.png" alt="Project-11">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-12.png" alt="Project-12">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-12.png" alt="Project-12">
+            </li>
+            <li class="portfolio__image">
+              <img src="./assets/images/Project-12.png" alt="Project-12">
+            </li>
+          </ul>
         </div>
     </section>
     <section class="about-us">
