--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
   <header class="header">
     <div class="wrapper header__wrapper">
-      <h1 class="visuallyhidden">Singilo</h1>
-      <a href="#" class="logo">SINGOLO<span>*</span></a>
+      <a href="#">
+        <h1 class="logo">Singolo</h1>
+      </a>
       <nav class="header__navigation">
           <ul class="navigation">
               <li class="navigation__link navigation__link_active"><a href="#slider">HOME</a></li>
@@ -149,12 +150,6 @@
           <li class="portfolio__image">
             <img src="./assets/images/Project-12.png" alt="Project-12">
           </li>
-          <li class="portfolio__image">
-            <img src="./assets/images/Project-12.png" alt="Project-12">
-          </li>
-          <li class="portfolio__image">
-            <img src="./assets/images/Project-12.png" alt="Project-12">
-          </li>
         </ul>
       </div>
     </section>
@@ -168,7 +163,7 @@
           tortor mauris condimentum nibh.
         </p>
         <div class="layout-3-column">
-          <div class="employee">
+          <div class="about-us__employee employee">
             <img src="./assets/images/Adam-Jensen.png" alt="Adam Jensen">
             <div class="employee__content">
               <h3 class="employee__title">Adam Jensen</h3>
@@ -200,7 +195,7 @@
               </ul>
             </div>
           </div>
-          <div class="employee">
+          <div class="about-us__employee employee">
             <img src="./assets/images/Desmond-Miles.png" alt="Desmond Miles">
             <div class="employee__content">
               <h3 class="employee__title">Desmond Miles</h3>
@@ -232,7 +227,7 @@
               </ul>
             </div>
           </div>
-          <div class="employee">
+          <div class="about-us__employee employee">
             <img src="./assets/images/Scolara-Visari.png" alt="Scolara Visari">
             <div class="employee__content">
               <h3 class="employee__title">Scolara Visari</h3>
