feat: make slider and update header

--- a/index.html
+++ b/index.html
@@ -30,11 +30,22 @@
       <div class="wrapper slider__wrapper">
         <div class="slider__button slider__button_left"></div>
         <div class="slider__content">
-          <div class="phone phone__vertical">
-            <img src="./assets/images/iPhone-Vertical.png" alt="iPhone-Vertical">
+          <div class="slider__item slider__item_active">
+            <div class="phone phone-vertical">
+              <img src="./assets/images/iPhone-Vertical.png" alt="iPhone-Vertical">
+              <div class="dark-screen phone-vertical__dark-screen"></div>
+              <div class="phone-button phone-vertical__button"></div>
+            </div>
+            <div class="phone phone-horizontal">
+              <img src="./assets/images/iPhone-Horizontal.png" alt="iPhone-Horizontal">
+              <div class="dark-screen phone-horizontal__dark-screen"></div>
+              <div class="phone-button phone-horizontal__button"></div>
+            </div>
           </div>
-          <div class="phone phone__horizontal">
-            <img src="./assets/images/iPhone-Horizontal.png" alt="iPhone-Horizontal">
+          <div class="slider__item">
+            <div class="phone phone-group">
+              <img src="./assets/images/iPhone-Group.png" alt="iPhone-Group">
+            </div>
           </div>
         </div>
         <div class="slider__button slider__button_right"></div>
