feat: add responsive for 375px

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header class="header">
     <div class="wrapper header__wrapper">
+      <div class="header__burger"><span></span></div>
       <a href="#">
         <h1 class="logo">Singolo</h1>
       </a>
