feat: add mobile menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <header class="header">
+    <div class="menu__overlay"></div>
     <div class="wrapper header__wrapper">
       <div class="header__burger"><span></span></div>
       <a href="#">
